src/scss/components/_card.scss
.card {
    color: $clr-primary-dark;
    width: 100%;
    max-width: 327px;
    text-align: center;
    background-color: $clr-white;
    padding: 2rem 1rem;
    margin: 1rem 0;
    border-radius: 13px;
    box-shadow: $card-box-shadow;
  
    &__tier {
      font-size: $fs-400;
      font-weight: $fw-500;
      margin-bottom: 2.5rem;
    }
  
    &__price {
        margin-bottom: 3.5rem;
      h2 {
        font-size: $fs-600;
        margin-bottom: 1rem;
      }

      p {
          margin-top: 0;
      }
    }
  
    &__features {
      color: $clr-gray;
      margin-bottom: 2rem;
    }
  }

  .card--light {
    .btn {
        color: $clr-primary-blue;
        background-color: rgba(81, 117, 255, .15);
    }

    .btn:hover {
        background-color: rgba(81, 117, 255, .25);
    }
  }

  .card--blue {
      color: $clr-white;
      background-color: $clr-primary-blue;
      background-image: url(../../assets/home/bg-pattern-pricing.svg);
      background-position: bottom;

      .card__price {
          h2 {
              color: $clr-white;
          }
      }

      .card__features {
          color: $clr-white;
          opacity: .75;
          
      }

      .btn {
          background-color: $clr-white;
          color: $clr-primary-blue;
      }

      .btn:hover {
          color: $clr-secondary-blue;
      }

  }

  .btn--tablet {
    display: none;
  }

  @media (min-width: $max-w-screen-md) {
    .btn--tablet {
      display: inline-block;
    }

    .btn--mobile {
      display: none;
    }

    .card {
      display: flex;
      justify-content: space-between;
      align-items: center;
      max-width: 689px;
      padding: 3rem;
      text-align: left;

      &__tier {
        margin: 0;
      }

      &__price {
        margin-bottom: 0;

        h2 {
          margin-top: .5rem;
        }
      }

      .btn {
        margin-top: 1rem;
      }
    }

    .card--blue {
      background-image: url(../../assets/home/bg-pattern-pricing.svg);
      background-position: 170%;
      background-repeat: no-repeat;
    }
  }

  @media (min-width: $max-w-screen-lg) {
    .btn--tablet {
      display: none;
    }

    .btn--mobile {
      display: inline-block;
    }

    .card {
      display: flex;
      flex-direction: column;
      max-width: 350px;
      text-align: center;

      &__tier {
        margin-bottom: 2.5rem;
      }
    
      &__price {
          margin-bottom: 3.5rem;
        h2 {
          margin-bottom: 1rem;
        }
  
        p {
            margin-top: 0;
        }
      }

      .btn {
        margin-top: 1rem;
      }
    }

    .card--blue {
      background-image: url(../../assets/home/bg-pattern-pricing.svg);
      background-position: bottom;
    }

  }

